--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background-color: #13151f;
+    color: white;
 }
 
 a {
@@ -13,4 +15,14 @@ a {
 
 * {
   box-sizing: border-box;
+}
+.app{
+  margin: 20px;
+}
+.main-video{
+  width: 100vw;
+  height: 30vh;
+  overflow: hidden;
+  position: relative;
+  margin-bottom: 50px;
 }
