--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,3 +26,54 @@ a {
   position: relative;
   margin-bottom: 50px;
 }
+.main-video img {
+  width: 100%;
+  object-fit: cover;
+}
+/* card component */
+.card{
+  width: 20%;
+  height: auto;
+  margin: 5px;
+  border-radius: 5%;
+  filter: drop-shadow(5px 5px 10px #000);
+}
+/* Navbar component */
+.navbar{
+  height: 80px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between; 
+}
+.disneyLogo{
+  color: white;
+}
+.accountInfo{
+  display: flex;
+  height: 50%;
+}
+.accountAvatar{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-left: 10px;
+}
+/* home page */
+.videoImage{
+  width: 100%;
+  position: absolute;
+  top: 0;
+}
+/* single video page (slug) */
+.info{
+  position: relative;
+  margin-top: 30%;
+  margin-left: 50px;
+  max-width: 50%;
+}
+.playButton{
+  position: absolute;
+}
+.infoFooter{
+  height: 100vh;
+}
